# bobcat_website

./: README.md  plotter.py  pyproject.toml
BOBcat_website/: Dockerfile  ingest.py  manage.py  old_models.py  plotter.py  requirements.txt
BOBcat_website/BOBcat_utils/: apps.py  ingestion.py
BOBcat_website/BOBcat_utils/Old_stuff/: README.md
BOBcat_website/BOBcat_website/: settings.py  urls.py
BOBcat_website/aboutpage/: README.md  views.py
BOBcat_website/bobcat_website/: asgi.py
BOBcat_website/mainpage/: models.py  urls.py  views.py
BOBcat_website/mainpage/migrations/: 0001_initial.py  0002_alter_source_dec_alter_source_ra.py  0002_delete_authgroup_delete_authgrouppermissions_and_more.py  0003_remove_source_ads_bibcode.py  0004_remove_source_id_alter_source_ned_name_and_more.py  0007_alter_binary_model_chirp_mass_and_more.py  0012_source_luminosity_distance.py  0014_alter_source_luminosity_distance.py  (+4 more)
BOBcat_website/modelpage/: models.py  urls.py  views.py
BOBcat_website/search/: README.md  urls.py  views.py
BOBcat_website/sourcepage/: models.py  urls.py  views.py
BOBcat_website/static/: base.css
BOBcat_website/templates/: base.html
blah2/aboutpage/: urls.py
blah2/bobcat_website/: wsgi.py
blah2/modelpage/: apps.py
blah2/sourcepage/: views.py
blah2/templates/: base.html
bobcat_website/: manage.py
bobcat_website/bobcat_website/: asgi.py  settings.py  urls.py  wsgi.py
bobcat_website/mainpage/: forms.py  urls.py  views.py
bobcat_website/search/: urls.py  views.py
bobcat_website/sourcepage/: apps.py
tests/: test_bobcat_utils.py
(+30 files in other folders)
